--- a/portfolio.html
+++ b/portfolio.html
@@ -376,6 +376,7 @@
     </footer>
     <div>
       <script src="./js/modal.js"></script>
+      <script src="./js/mobile-menu.js"></script>
     </div>
   </body>
 </html>
