--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!--titel section-sectiunea 1-->
       <section class="header-section prime-section title-people-img">
         <div class="container ccc">
-          <h1 class="header-title">Effective Solutions for Your Business</h1>
+          <h1 class="header-title">Effective Solutions For Your Business</h1>
           <button class="order-service-button" type="button" data-modal-open>
             Order Service
           </button>
@@ -94,7 +94,7 @@
           <ul class="list">
             <li class="s-section-li">
               <div class="section-two">
-                <svg class="section-two-svg" width="64" height="64">
+                <svg width="64" height="64">
                   <use href="./images/icons.svg#svgantenna"></use>
                 </svg>
               </div>
