--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
           <a class="logo-hwiii list link logo" href="./index.html"
             >Web<span class="span">Studio</span>
           </a>
+          <div class="charm_menu-hamburger">
+            <svg width="32" height="22">
+              <use src="./images/icons.svg#charm_menu-hamburger"></use>
+            </svg>
+          </div>
+
           <!--header-menu-->
           <ul class="list nav-menu">
             <li>
@@ -484,7 +490,7 @@
     <footer class="footer-studio footer final-part">
       <!--logo-->
       <div class="container customers-icons">
-        <div>
+        <div class="mobile-style">
           <a class="logo link footer-logo" href="./index.html"
             >Web<span class="footer-span">Studio</span></a
           >
