hamburger menu solved(only style)

--- a/index.html
+++ b/index.html
@@ -32,12 +32,6 @@
           <a class="logo-hwiii list link logo" href="./index.html"
             >Web<span class="span">Studio</span>
           </a>
-          <div class="charm_menu-hamburger">
-            <svg width="32" height="22">
-              <use src="./images/icons.svg#charm_menu-hamburger"></use>
-            </svg>
-          </div>
-
           <!--header-menu-->
           <ul class="list nav-menu">
             <li>
@@ -61,6 +55,11 @@
             </li>
           </ul>
         </nav>
+        <div class="charm_menu-hamburger">
+          <div class="lines"></div>
+          <div class="lines"></div>
+          <div class="lines"></div>
+        </div>
         <!--contacts-->
         <address class="adress">
           <!--de la <adress> am scos clasa adress-->
@@ -79,6 +78,7 @@
           </ul>
         </address>
       </div>
+
       <!--logo-->
     </header>
     <!--main-section-->
