--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </li>
           </ul>
         </nav>
-        <div class="charm_menu-hamburger">
+        <div class="charm_menu-hamburger" data-modal-open>
           <div class="lines"></div>
           <div class="lines"></div>
           <div class="lines"></div>
@@ -639,6 +639,13 @@
           </div>
           <button class="terms-and-services-button" type="submit">Send</button>
         </form>
+      </div>
+      <div class="modal-window-mobile-menu">
+        <button class="close-button" type="button" data-modal-close>
+          <svg class="svg-close-button" width="8" height="8">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
