--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 
     <header class="header-hwiii">
       <div class="header-div container">
+        <button class="open-menu-btn" id="open-menu" js-open-menu></button>
         <nav class="nav-hwiii">
           <a class="logo-hwiii list link logo" href="./index.html"
             >Web<span class="span">Studio</span>
           </a>
+
           <!--header-menu-->
           <ul class="list nav-menu">
             <li>
@@ -73,9 +75,8 @@
           </ul>
         </address>
       </div>
-      <div class="modal-mobile" js-menu-container>
-        <button id="open-menu" js-open-menu></button>
-        <div id="open-menu" class="modal-mobile-nav-menu">
+      <div id="open-menu" class="modal-mobile" js-menu-container>
+        <div class="modal-mobile-nav-menu">
           <button class="close-button" type="button" js-close-menu>
             <svg class="svg-close-button" width="8" height="8">
               <use href="./images/icons.svg#close"></use>
@@ -89,16 +90,12 @@
                 >
               </li>
               <li>
-                <a
-                   class="link studio-mobile-link""
-                  href="./portfolio.html"
+                <a class="link studio-mobile-link" href="./portfolio.html"
                   >Portfolio</a
                 >
               </li>
               <li>
-                <a  class="link studio-mobile-link" href="">
-                  Contacts</a
-                >
+                <a class="link studio-mobile-link" href=""> Contacts</a>
               </li>
             </ul>
           </nav>
@@ -106,52 +103,51 @@
           <address class="mobile-menu-adress">
             <ul class="list mobile-adress-list">
               <li>
-                <a class="link adress-color" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-
-              <li>
                 <a class="link adress-color" href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link adress-color mobile-mail-style"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
                 >
               </li>
             </ul>
           </address>
           <ul class="social-media-team list-disc">
-                  <li class="social-media-design">
-                    <a class="section-iv-link" href="">
-                      <svg class="svg-social-media-links" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-
-                  <li class="social-media-design">
-                    <a class="section-iv-link" href="">
-                      <svg class="svg-social-media-links" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-media-design">
-                    <a class="section-iv-link" href="">
-                      <svg class="svg-social-media-links" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-media-design">
-                    <a class="section-iv-link" href="">
-                      <svg class="svg-social-media-links" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+            <li class="social-media-design">
+              <a class="section-iv-link" href="">
+                <svg class="svg-social-media-links" width="16" height="16">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-design">
+              <a class="section-iv-link" href="">
+                <svg class="svg-social-media-links" width="16" height="16">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-design">
+              <a class="section-iv-link" href="">
+                <svg class="svg-social-media-links" width="16" height="16">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-design">
+              <a class="section-iv-link" href="">
+                <svg class="svg-social-media-links" width="16" height="16">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
-
       <!--logo-->
     </header>
     <!--main-section-->
