--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
       <!--What-are-we-doing-sectiunea 3-->
       <section class="section-iii">
-        <div class="container">
+        <div class="container is-hidden">
           <h2 class="section-c-title section-c">What are we doing</h2>
           <ul class="s-section-list list">
             <li class="s-section-li">
