--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
             </li>
           </ul>
         </address>
+        <div class="js-open-menu">
+          <svg width="40" height="30">
+            <use href="./images/icons.svg#hamburger-4-svgrepo-com"></use>
+          </svg>
+        </div>
       </div>
       <!--logo-->
     </header>
@@ -494,7 +499,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="social-media-mobile-style">
           <p class="psm footer-social-media">Social media</p>
           <ul class="media-links-portfolio list-disc social-media-svg">
             <li class="svg-list-port">
