--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section class="s-section">
         <div class="container">
           <h2 class="advantages-title visually-hidden">Advantages</h2>
-          <ul class="list mobile-screen">
+          <ul class="list mobile-screen s-two">
             <li class="s-section-li">
               <div class="section-two">
                 <svg width="64" height="64">
