--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
 
       <!--What-are-we-doing-sectiunea 3-->
       <section class="section-iii">
-        <div class="container is-hidden">
+        <div class="container">
           <h2 class="section-c-title section-c">What are we doing</h2>
           <ul class="s-section-list list">
-            <li class="s-section-li">
+            <li class="s-section-li what-are-we-doing-list">
               <img
                 class="section-iii-img all-img"
                 src="./images/what-are-we-doing-pict-1.jpg"
@@ -163,7 +163,7 @@
                 width="360"
               />
             </li>
-            <li class="s-section-li">
+            <li class="s-section-li what-are-we-doing-list">
               <img
                 class="section-iii-img all-img"
                 src="./images/what-are-we-doing-pict-2.jpg"
@@ -171,7 +171,7 @@
                 width="360"
               />
             </li>
-            <li class="s-section-li">
+            <li class="s-section-li what-are-we-doing-list">
               <img
                 class="section-iii-img all-img"
                 src="./images/what-are-we-doing-pict-3.jpg"
