--- a/portfolio.html
+++ b/portfolio.html
@@ -311,7 +311,7 @@
     <footer class="footer-studio footer final-part">
       <!--logo-->
       <div class="container customers-icons">
-        <div>
+        <div class="mobile-style">
           <a class="logo link footer-logo" href="./index.html"
             >Web<span class="footer-span">Studio</span></a
           >
