mobile-port&studio

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <!--titel section-sectiunea 1-->
       <section class="header-section prime-section title-people-img">
         <div class="container ccc">
-          <h1 class="header-title">Effective Solutions For Your Business</h1>
+          <h1 class="header-title">Effective Solutions for Your Business</h1>
           <button class="order-service-button" type="button" data-modal-open>
             Order Service
           </button>
