--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,11 @@
             </li>
           </ul>
         </address>
+        <div class="js-open-menu">
+          <svg width="40" height="30">
+            <use href="./images/icons.svg#hamburger-4-svgrepo-com"></use>
+          </svg>
+        </div>
       </div>
       <!--logo-->
     </header>
@@ -125,7 +130,7 @@
                   </p>
                 </div>
                 <div class="div-app-interface">
-                  <h2 class="advantages-sub-title aaa">
+                  <h2 class="portfolio-card-title">
                     Banking App Interface Concept
                   </h2>
                   <p class="paragraph-port-cards">App</p>
@@ -148,7 +153,7 @@
                   </p>
                 </div>
                 <div class="div-app-interface">
-                  <h2 class="advantages-sub-title aaa">Cashless Payment</h2>
+                  <h2 class="portfolio-card-title">Cashless Payment</h2>
                   <p class="paragraph-port-cards">Marketing</p>
                 </div>
               </a>
@@ -169,7 +174,7 @@
                   </p>
                 </div>
                 <div class="div-app-interface">
-                  <h2 class="advantages-sub-title aaa">Meditation App</h2>
+                  <h2 class="portfolio-card-title">Meditation App</h2>
                   <p class="paragraph-port-cards">App</p>
                 </div>
               </a>
@@ -190,7 +195,7 @@
                   </p>
                 </div>
                 <div class="div-app-interface">
-                  <h2 class="advantages-sub-title aaa">Taxi Service</h2>
+                  <h2 class="portfolio-card-title">Taxi Service</h2>
                   <p class="paragraph-port-cards">Marketing</p>
                 </div>
               </a>
@@ -211,7 +216,7 @@
                   </p>
                 </div>
                 <div class="div-app-interface">
-                  <h2 class="advantages-sub-title aaa">Screen Illustrations</h2>
+                  <h2 class="portfolio-card-title">Screen Illustrations</h2>
                   <p class="paragraph-port-cards">Design</p>
                 </div>
               </a>
@@ -232,7 +237,7 @@
                   </p>
                 </div>
                 <div class="div-app-interface">
-                  <h2 class="advantages-sub-title aaa">Online Courses</h2>
+                  <h2 class="portfolio-card-title">Online Courses</h2>
                   <p class="paragraph-port-cards">Marketing</p>
                 </div>
               </a>
@@ -253,7 +258,7 @@
                   </p>
                 </div>
                 <div class="div-app-interface">
-                  <h2 class="advantages-sub-title aaa">
+                  <h2 class="portfolio-card-title">
                     Instagram Stories Concept
                   </h2>
                   <p class="paragraph-port-cards">Design</p>
@@ -276,7 +281,7 @@
                   </p>
                 </div>
                 <div class="div-app-interface">
-                  <h2 class="advantages-sub-title aaa">Organic Food</h2>
+                  <h2 class="portfolio-card-title">Organic Food</h2>
                   <p class="paragraph-port-cards">Web Site</p>
                 </div>
               </a>
@@ -297,7 +302,7 @@
                   </p>
                 </div>
                 <div class="div-app-interface">
-                  <h2 class="advantages-sub-title aaa">Fresh Coffee</h2>
+                  <h2 class="portfolio-card-title">Fresh Coffee</h2>
                   <p class="paragraph-port-cards">Web Site</p>
                 </div>
               </a>
