missing the menu and pictures

--- a/portfolio.html
+++ b/portfolio.html
@@ -313,7 +313,7 @@
     </main>
 
     <!--footer-section-->
-    <footer class="footer-studio footer final-part">
+    <footer class="footer-studio footer">
       <!--logo-->
       <div class="container customers-icons">
         <div class="mobile-style">
