--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       </section>
     </main>
     <!--footer-section-->
-    <footer class="footer-studio footer final-part">
+    <footer class="footer">
       <!--logo-->
       <div class="container customers-icons">
         <div class="mobile-style">
