--- a/index.html
+++ b/index.html
@@ -73,10 +73,94 @@
             </li>
           </ul>
         </address>
-        <div class="js-open-menu">
-          <svg width="40" height="30">
-            <use href="./images/icons.svg#hamburger-4-svgrepo-com"></use>
-          </svg>
+        <div class="hamburger">
+          <button
+            type="button"
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="burger-svg" width="40" height="30">
+              <use href="./images/icons.svg#hamburger-4-svgrepo-com"></use>
+            </svg>
+          </button>
+          <div class="menu-container js-menu-container" id="mobile-menu">
+                </button>
+            <ul class="list mobile-menu-items">
+              <li>
+                <a
+                  class="link mobile-menu-link "
+                  href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li>
+                <a
+                  class=" link mobile-menu-link "
+                  href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li>
+                <a class=" link mobile-menu-link " href="">
+                  Contacts</a
+                >
+              </li>
+            </ul>
+            <!--contacts-->
+            <address class="adress-mobile-menu">
+              <!--de la <adress> am scos clasa adress-->
+              <ul class="list mobile-adress-list">
+                <li>
+                  <a class="link mobile-mail" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+
+                <li>
+                  <a class="link mobile-phone-color" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="social-media-team-mobile list-disc">
+              <li class="social-media-design">
+                <a class="section-iv-link" href="">
+                  <svg class="svg-social-media-links" width="16" height="16">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="social-media-design">
+                <a class="section-iv-link" href="">
+                  <svg class="svg-social-media-links" width="16" height="16">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-design">
+                <a class="section-iv-link" href="">
+                  <svg class="svg-social-media-links" width="16" height="16">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-design">
+                <a class="section-iv-link" href="">
+                  <svg class="svg-social-media-links" width="16" height="16">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <button class="menu-toggle js-close-menu" type="button">
+              <svg class="svg-close-button" width="8" height="8">
+                <use href="./images/icons.svg#close"></use>
+              </svg>
+        
+          </div>
         </div>
       </div>
       <!--logo-->
