--- a/index.html
+++ b/index.html
@@ -84,40 +84,27 @@
               <use href="./images/icons.svg#hamburger-4-svgrepo-com"></use>
             </svg>
           </button>
-        </div>
-        <div class="menu-container js-menu-container" id="mobile-menu">
-                </button>
+          <div class="menu-container js-menu-container" id="mobile-menu">
             <ul class="list mobile-menu-items">
               <li>
-                <a
-                  class="link mobile-menu-link "
-                  href="./index.html"
-                  >Studio</a
-                >
+                <a class="link mobile-menu-link" href="./index.html">Studio</a>
               </li>
               <li>
-                <a
-                  class=" link mobile-menu-link "
-                  href="./portfolio.html"
+                <a class="link mobile-menu-link" href="./portfolio.html"
                   >Portfolio</a
                 >
               </li>
               <li>
-                <a class=" link mobile-menu-link " href="">
-                  Contacts</a
-                >
+                <a class="link mobile-menu-link" href=""> Contacts</a>
               </li>
             </ul>
-            <!--contacts-->
             <address class="adress-mobile-menu">
-              <!--de la <adress> am scos clasa adress-->
               <ul class="list mobile-adress-list">
                 <li>
                   <a class="link mobile-mail" href="mailto:info@devstudio.com"
                     >info@devstudio.com</a
                   >
                 </li>
-
                 <li>
                   <a class="link mobile-phone-color" href="tel:+110001111111"
                     >+11 (000) 111-11-11</a
@@ -133,7 +120,6 @@
                   </svg>
                 </a>
               </li>
-
               <li class="social-media-design">
                 <a class="section-iv-link" href="">
                   <svg class="svg-social-media-links" width="16" height="16">
@@ -160,8 +146,9 @@
               <svg class="svg-close-button" width="8" height="8">
                 <use href="./images/icons.svg#close"></use>
               </svg>
-        
+            </button>
           </div>
+        </div>
       </div>
       <!--logo-->
     </header>
